RESOLVED FIXED297282
[WebXR + WebGPU] Multisampled depths are not correctly resolved into CompositorService's texture
https://bugs.webkit.org/show_bug.cgi?id=297282
Summary [WebXR + WebGPU] Multisampled depths are not correctly resolved into Composit...
Mike Wyrzykowski
Reported 2025-08-12 13:07:06 PDT
[WebXR + WebGPU] Multisampled depths are not correctly resolved into CompositorService's texture
Attachments
Radar WebKit Bug Importer
Comment 1 2025-08-12 13:07:23 PDT
Mike Wyrzykowski
Comment 2 2025-08-13 07:38:48 PDT
EWS
Comment 3 2025-08-15 00:23:39 PDT
Committed 298744@main (60696e00c94a): <https://commits.webkit.org/298744@main> Reviewed commits have been landed. Closing PR #49334 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.