[WebXR + WebGPU] Multisampled depths are not correctly resolved into CompositorService's texture https://bugs.webkit.org/show_bug.cgi?id=297282 rdar://158156955

Reviewed by Dan Glastonbury.

When using MSAA depth textures, we need to resolve to CompositorService's
single sampled depth array slice and store the results in the appropriate
slice.

* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::CommandEncoder::beginRenderPass):
* Source/WebGPU/WebGPU/Device.h:
* Source/WebGPU/WebGPU/Device.mm:
(WebGPU::Device::getXRViewSubImage const):

Canonical link: https://commits.webkit.org/298744@main